--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -20,6 +20,8 @@
   },
   "plugins": ["@typescript-eslint", "prettier"],
   "rules": {
+    "import/prefer-default-export": "off",
+    "class-methods-use-this": "off",
     "prettier/prettier": "error",
     "@typescript-eslint/camelcase": "off",
     "@typescript-eslint/no-unused-vars": [
