--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js",
+    "start": "ts-node src/index.ts",
+    "dev:server": "ts-node-dev --inspect --transpileOnly --ignore-watch node_modules src/server.ts"
+  },
   "devDependencies": {
     "@types/express": "^4.17.6",
     "@typescript-eslint/eslint-plugin": "^3.3.0",
@@ -18,6 +23,9 @@
     "typescript": "^3.9.5"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "node-ts": "^5.0.6",
+    "pg": "^8.2.1",
+    "typeorm": "^0.2.25"
   }
 }
