--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -22,6 +22,7 @@
   "rules": {
     "import/prefer-default-export": "off",
     "class-methods-use-this": "off",
+    "camelcase": "off",
     "prettier/prettier": "error",
     "@typescript-eslint/camelcase": "off",
     "@typescript-eslint/no-unused-vars": [
