--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "dev:server": "ts-node-dev --inspect --transpileOnly --ignore-watch node_modules src/server.ts"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.6",
     "@typescript-eslint/eslint-plugin": "^3.3.0",
     "@typescript-eslint/parser": "^3.3.0",
@@ -23,9 +24,14 @@
     "typescript": "^3.9.5"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
+    "nexmo": "^2.7.0",
     "node-ts": "^5.0.6",
     "pg": "^8.2.1",
+    "reflect-metadata": "^0.1.13",
+    "twilio": "^3.46.0",
     "typeorm": "^0.2.25"
   }
 }
