--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.6",
+    "@types/jsonwebtoken": "^8.5.0",
     "@typescript-eslint/eslint-plugin": "^3.3.0",
     "@typescript-eslint/parser": "^3.3.0",
     "eslint": "^7.2.0",
@@ -27,6 +28,7 @@
     "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^8.5.1",
     "nexmo": "^2.7.0",
     "node-ts": "^5.0.6",
     "pg": "^8.2.1",
