--- a/mobile/.eslintrc.json
+++ b/mobile/.eslintrc.json
@@ -29,8 +29,12 @@
     "@typescript-eslint"
   ],
   "rules": {
+    "arrow-parens": "off",
+    "object-curly-newline": "off",
+    "react/jsx-props-no-spreading": "off",
     "prettier/prettier": "error",
     "react-hooks/rules-of-hooks": "error",
+    "react/prop-types": "off",
     "react-hooks/exhaustive-deps": "warn",
     "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
     "import/prefer-default-export": "off",
