--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@expo/vector-icons": "^10.0.0",
     "@react-native-community/async-storage": "~1.11.0",
+    "@react-native-community/datetimepicker": "2.4.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/picker": "1.6.0",
     "@react-navigation/native": "^5.6.1",
@@ -18,6 +19,7 @@
     "@unform/core": "^2.1.3",
     "@unform/mobile": "^2.1.3",
     "axios": "^0.19.2",
+    "date-fns": "^2.0.0-beta.5",
     "expo": "~38.0.1",
     "expo-status-bar": "^1.0.0",
     "react": "~16.11.0",
