--- a/backend/ormconfig.json
+++ b/backend/ormconfig.json
@@ -1,17 +1,31 @@
-{
-  "type": "postgres",
-  "host": "localhost",
-  "port": 5432,
-  "username": "docker",
-  "password": "docker",
-  "database": "app_memoria",
-  "migrations": [
-    "./src/database/migrations/*.ts"
-  ],
-  "entities": [
-    "./src/modules/*/models/*.ts"
-  ],
-  "cli": {
-    "migrationsDir": "./src/database/migrations"
+[
+  {
+    "name": "default",
+    "type": "postgres",
+    "host": "localhost",
+    "port": 5432,
+    "username": "docker",
+    "password": "docker",
+    "database": "app_memoria",
+    "migrations": [
+      "./src/database/migrations/*.ts"
+    ],
+    "entities": [
+      "./src/modules/*/models/*.ts"
+    ],
+    "cli": {
+      "migrationsDir": "./src/database/migrations"
+    }
+  },
+  {
+    "name": "mongo",
+    "type": "mongodb",
+    "host": "localhost",
+    "port": 27017,
+    "database": "app_memoria",
+    "useUnifiedTopology": true,
+    "entities": [
+      "./src/modules/*/schemas/*.ts"
+    ]
   }
-}
+]
