--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.5.9",
     "nexmo": "^2.7.0",
     "node-ts": "^5.0.6",
     "pg": "^8.2.1",
