--- a/mobile/package.json
+++ b/mobile/package.json
@@ -25,6 +25,7 @@
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.0.tar.gz",
+    "react-native-event-listeners": "^1.0.7",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-masked-text": "^1.13.0",
     "react-native-modal": "^11.5.6",
