--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongodb": "^3.5.25",
     "@types/mongoose": "^5.7.30",
+    "@types/node-cron": "^2.0.3",
     "@typescript-eslint/eslint-plugin": "^3.3.0",
     "@typescript-eslint/parser": "^3.3.0",
     "eslint": "^7.2.0",
@@ -27,16 +28,20 @@
     "typescript": "^3.9.5"
   },
   "dependencies": {
+    "@types/socket.io": "^2.1.10",
     "bcryptjs": "^2.4.3",
+    "date-fns": "^2.0.0-beta.5",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.9",
     "mongoose": "^5.9.22",
     "nexmo": "^2.7.0",
+    "node-cron": "^2.0.3",
     "node-ts": "^5.0.6",
     "pg": "^8.2.1",
     "reflect-metadata": "^0.1.13",
+    "socket.io": "^2.3.0",
     "twilio": "^3.46.0",
     "typeorm": "^0.2.25"
   }
