--- a/mobile/package.json
+++ b/mobile/package.json
@@ -22,15 +22,22 @@
     "axios": "^0.19.2",
     "date-fns": "^2.0.0-beta.5",
     "expo": "~38.0.1",
+    "expo-constants": "^9.1.1",
+    "expo-notifications": "^0.4.0",
+    "expo-permissions": "^9.0.1",
     "expo-status-bar": "^1.0.0",
+    "isomorphic-fetch": "^2.2.1",
+    "node-fetch": "^2.6.0",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.0.tar.gz",
+    "react-native-calendars": "^1.300.0",
     "react-native-event-listeners": "^1.0.7",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-masked-text": "^1.13.0",
     "react-native-modal": "^11.5.6",
     "react-native-picker-select": "^7.0.0",
+    "react-native-push-notification": "^4.0.0",
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
@@ -39,12 +46,17 @@
     "react-native-tab-view": "^2.15.0",
     "react-native-text-input-mask": "^2.0.0",
     "react-native-web": "~0.11.7",
+    "socket.io-client": "^2.3.0",
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
+    "@types/node-fetch": "^2.5.7",
     "@types/react": "~16.9.41",
     "@types/react-native": "~0.62.13",
+    "@types/react-native-calendars": "^1.20.8",
+    "@types/react-native-push-notification": "^3.0.9",
+    "@types/socket.io-client": "^1.4.33",
     "@types/styled-components": "^5.1.0",
     "@typescript-eslint/eslint-plugin": "^3.4.0",
     "@typescript-eslint/parser": "^3.4.0",
