--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongodb": "^3.5.25",
     "@types/mongoose": "^5.7.30",
+    "@types/multer": "^1.4.3",
     "@types/node-cron": "^2.0.3",
     "@typescript-eslint/eslint-plugin": "^3.3.0",
     "@typescript-eslint/parser": "^3.3.0",
@@ -36,6 +37,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.9",
     "mongoose": "^5.9.22",
+    "multer": "^1.4.2",
     "nexmo": "^2.7.0",
     "node-cron": "^2.0.3",
     "node-ts": "^5.0.6",
