--- a/mobile/package.json
+++ b/mobile/package.json
@@ -23,6 +23,7 @@
     "date-fns": "^2.0.0-beta.5",
     "expo": "~38.0.1",
     "expo-constants": "^9.1.1",
+    "expo-image-picker": "~8.3.0",
     "expo-notifications": "^0.4.0",
     "expo-permissions": "^9.0.1",
     "expo-status-bar": "^1.0.0",
