feat: Refactory messages in application

--- a/mobile/package.json
+++ b/mobile/package.json
@@ -23,15 +23,18 @@
     "date-fns": "^2.0.0-beta.5",
     "expo": "~38.0.1",
     "expo-constants": "^9.1.1",
+    "expo-file-system": "~9.0.1",
     "expo-image-picker": "~8.3.0",
     "expo-notifications": "^0.4.0",
     "expo-permissions": "^9.0.1",
+    "expo-sharing": "~8.2.1",
     "expo-status-bar": "^1.0.0",
     "isomorphic-fetch": "^2.2.1",
     "node-fetch": "^2.6.0",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.0.tar.gz",
+    "react-native-base64": "^0.1.0",
     "react-native-calendars": "^1.300.0",
     "react-native-event-listeners": "^1.0.7",
     "react-native-gesture-handler": "~1.6.0",
