--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -32,6 +32,7 @@
       "prettier/prettier": "error",
       "react-hooks/rules-of-hooks": "error",
       "react/prop-types": "off",
+      "no-underscore-dangle": "off",
       "react/jsx-props-no-spreading": "off",
       "camelcase":"off",
       "react-hooks/exhaustive-deps": "warn",
